<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieList</string>
    <string name="action_settings">Settings</string>
    <string name="menu_welcome">Bienvenido a MovieList</string>
    <string name="menu_movie_name">Nombre de la peli</string>
    <string name="button">Add</string>
    <string name="film_remove_dialog">Are you sure to remove that film?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    
    <string name="login">Login</string>
    <string name="signin">Signin</string>

    <!-- login layout -->
    <string name="username">username</string>
    <string name="password">password</string>

</resources>